--- a/style.css
+++ b/style.css
@@ -35,13 +35,13 @@ main {
     display: flex;
     flex-direction: column; 
     gap: 15px;
-    margin: 0 25px 35px 20px;
+    margin: 0 25px 35px 25px;
     text-align: center;
     font-family: 'Outfit', sans-serif;
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 23px;
     font-weight: 700;
     color: var(--dark-blue);
     filter:drop-shadow(0 4px 4px rgba(0, 0, 0, 0.59));
@@ -51,6 +51,7 @@ p {
     color: var(--grayish-blue);
     font-weight: 400;
     font-size: 15px;
+    margin: .2em;
 }
 
 #qr-code {
