--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
@@ -33,25 +31,24 @@ main {
 
 .content {
     display: flex;
-    flex-direction: column; 
-    gap: 15px;
-    margin: 0 25px 35px 25px;
+    flex-direction: column;
+    margin: 0 20px 30px 20px;
     text-align: center;
     font-family: 'Outfit', sans-serif;
 }
 
 h1 {
-    font-size: 23px;
+    font-size: 22px;
     font-weight: 700;
     color: var(--dark-blue);
-    filter:drop-shadow(0 4px 4px rgba(0, 0, 0, 0.59));
+    margin: 0 0 14px 0;
+    /* filter:drop-shadow(0 4px 4px rgba(0, 0, 0, 0.59)); */
 }
 
 p {
     color: var(--grayish-blue);
     font-weight: 400;
-    font-size: 15px;
-    margin: .2em;
+    font-size: 16px;
 }
 
 #qr-code {
