--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 *,
 *::after,
 *::before {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -31,8 +33,9 @@ main {
 
 .content {
     display: flex;
-    flex-direction: column;
-    margin: 0 20px 30px 20px;
+    flex-direction: column; 
+    gap: 15px;
+    margin: 0 25px 35px 25px;
     text-align: center;
     font-family: 'Outfit', sans-serif;
 }
@@ -41,7 +44,6 @@ h1 {
     font-size: 22px;
     font-weight: 700;
     color: var(--dark-blue);
-    margin: 0 0 14px 0;
     /* filter:drop-shadow(0 4px 4px rgba(0, 0, 0, 0.59)); */
 }
 
@@ -49,6 +51,7 @@ p {
     color: var(--grayish-blue);
     font-weight: 400;
     font-size: 16px;
+    margin: .2em;
 }
 
 #qr-code {
